[gd_scene load_steps=2 format=3 uid="uid://cr5s87lyynr4h"]

[ext_resource type="Script" path="res://src/UI/menus/settings/audio/audio slider/audio_slider.gd" id="1_733gk"]

[node name="AudioSlider" type="HSlider"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
min_value = -80.0
max_value = 6.0
script = ExtResource("1_733gk")

[connection signal="drag_ended" from="." to="." method="_on_drag_ended"]
